Final version 2012-09-14-and-again-about-fonts.md

--- a/source/_posts/2009-07-30-suse-studio-1-0.markdown
+++ b/source/_posts/2009-07-30-suse-studio-1-0.markdown
@@ -5,6 +5,7 @@ author: hrafn
 published: true
 date: 2009-07-30T18:08:46+0400
 permalink: /2009/07/suse-studio-1-0
+comments: true
 categories:
 - susestudio
 - suse
