--- a/source/_posts/2010-02-14-i-am-rhct.md
+++ b/source/_posts/2010-02-14-i-am-rhct.md
@@ -5,6 +5,7 @@ author: hrafn
 published: true
 date: 2010-02-14T08:59:34+0000
 permalink: /2010/02/i-am-rhct
+comments: true
 categories:
 - redhat
 - me
