--- a/source/_posts/2010-06-07-f13-i-wicd.md
+++ b/source/_posts/2010-06-07-f13-i-wicd.md
@@ -5,6 +5,7 @@ author: hrafn
 published: true
 date: 2010-06-07T16:28:28+0000
 permalink: /2010/06/f13-i-wicd
+comments: true
 categories:
 - fedora
 - wifi
