--- a/source/_posts/2010-09-23-ntsysv.md
+++ b/source/_posts/2010-09-23-ntsysv.md
@@ -5,6 +5,7 @@ author: hrafn
 published: true
 date: 2010-09-23T15:24:30+0000
 permalink: /2010/09/ntsysv
+comments: true
 categories:
 - software
 - rhel
