--- a/source/_posts/2010-12-30-rhcsa.md
+++ b/source/_posts/2010-12-30-rhcsa.md
@@ -5,6 +5,7 @@ author: hrafn
 published: true
 date: 2010-12-30T09:43:56+0000
 permalink: /2010/12/rhcsa
+comments: true
 categories:
 - redhat
 - certification
